<resources>
    <string name="app_name">E_Calculator</string>
    <string name="calculator">Calculator</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="result">=</string>
    <string name="all_clear">AC</string>
    <string name="clear">C</string>
    <string name="close_bracket">)</string>
    <string name="open_bracket">(</string>


</resources>